[Feature] spark spark and spark cluster